--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="cocos2d-js-v3.11.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/resource.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/EnemyBat.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/zombie.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
 </head>
 <body>
