スライム追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script type="text/javascript" src="src/resource.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/EnemyBat.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/zombie.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_green.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_yellow.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_red.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/coin.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
 </head>
 <body>
