--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="src/slime_yellow.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/slime_red.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/coin.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/ui_gauge_fill.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
 </head>
 <body>
