消化ゲージ

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="src/coin6.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/ui_gauge_fill.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/ui_gauge_fill2.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/ui_gauge_fill3.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
 </head>
 
